# fintech-fraud-detection

./: .gitattributes  .gitignore  main.py  mlflow.db  pyproject.toml
data/processed/: processed_df.parquet  processed_with_autoencoder.parquet
features/: feature_defs.py  feature_pipeline.py
inference/: api.py
infra/: Dockerfile.api  Dockerfile.consumer  Dockerfile.producer  backup.yml  deploy.sh  docker-compose.yml
mlruns/1/models/m-02dc49dabf354f86833888f88dc95e74/artifacts/: MLmodel  conda.yaml  model.lgb
mlruns/1/models/m-91ea0b0bbda34a18b89e4ad626341bf2/artifacts/: MLmodel  conda.yaml  model.lgb  requirements.txt
streaming/: consumer.py  create_topics.sh  producer.py
training/: model.txt  train.py  train_autoencoder.py  train_lgb.py  train_nn.py  train_xgb.py
utils/: eval.py
